# titan

./: .eslintignore  .gitattributes  .gitignore  .npmrc  .prettierignore  .taplo.toml  BAZEL.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  go.work  jest.config.ts  jest.preset.js  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.json  rust-toolchain  sgconfig.yml  sonar-project.properties  test.ts  titan.json  titanw.js  tsconfig.base.json  tsconfig.json  vercel.json  version.txt
crates/node-file-trace/: Cargo.toml  build.rs
crates/node-file-trace/src/: lib.rs  main.rs  nft_json.rs
crates/titan-tasks-bytes/: Cargo.toml
crates/titan-tasks-bytes/src/: bytes.rs  lib.rs
crates/titan-tasks-env/: Cargo.toml
crates/titan-tasks-env/src/: command_line.rs  custom.rs  dotenv.rs  filter.rs  lib.rs
crates/titan-tasks-fetch/: Cargo.toml  build.rs
crates/titan-tasks-fetch/src/: lib.rs
crates/titan-tasks-fetch/tests/: fetch.rs
crates/titan-tasks-macros-tests/: Cargo.toml
crates/titan-tasks-macros-tests/tests/: task_input.rs  value_debug.rs
crates/titan-tasks-memory/: Cargo.toml
crates/titan-tasks-memory/benches/: mod.rs  scope_stress.rs  stress.rs
crates/titan-tasks-memory/src/: cell.rs  gc.rs  memory_backend.rs  memory_backend_with_pg.rs  output.rs  stats.rs  task.rs
crates/titan-tasks-memory/src/task/: aggregation.rs  meta_state.rs  stats.rs
crates/titan-tasks-memory/src/viz/: graph.rs  mod.rs  table.rs
crates/titan-tasks-memory/tests/: all_in_one.rs  collectibles.rs  debug.rs  read_ref_cell.rs  scope_stress.rs  trait_ref_cell.rs
crates/titanpack/: Cargo.toml  README.md  architecture.md
crates/titanpack-binding/: Cargo.toml  README.md
crates/titanpack-binding/src/: lib.rs
crates/titanpack-cli/: Cargo.toml
crates/titanpack-cli-utils/: Cargo.toml
crates/titanpack-cli-utils/src/: issue.rs  lib.rs  runtime_entry.rs
crates/titanpack-cli/benches/: bundler.rs  mod.rs
crates/titanpack-cli/src/: arguments.rs  lib.rs  main.rs  util.rs
crates/titanpack-cli/src/dev/: mod.rs
crates/titanpack-css/: Cargo.toml
crates/titanpack-css/src/: code_gen.rs  embed.rs  global_asset.rs  module_asset.rs  process.rs
crates/titanpack-css/src/chunk/single_item_chunk/: chunk.rs  source_map.rs
crates/titanpack-css/src/references/: import.rs  mod.rs  url.rs
crates/titanpack-ecmascript-hmr-protocol/: Cargo.toml
crates/titanpack-ecmascript-runtime/: Cargo.toml  README.md
crates/titanpack-ecmascript-runtime/js/src/shared/: runtime-types.d.ts
crates/titanpack-ecmascript-runtime/src/: asset_context.rs  dummy_runtime.rs  embed_js.rs  runtime_type.rs
crates/titanpack-env/: Cargo.toml
crates/titanpack-env/src/: asset.rs  dotenv.rs  try_env.rs
crates/titanpack-node/: Cargo.toml
crates/titanpack-node/js/src/ipc/: index.ts
crates/titanpack-node/js/src/transforms/: webpack-loaders.ts
crates/titanpack-node/src/: bootstrap.rs  lib.rs  pool.rs
crates/titanpack-node/src/render/: error_page.rs  issue.rs  node_api_source.rs  render_proxy.rs
crates/titanpack-node/src/source_map/: mod.rs
crates/titanpack-swc-utils/: Cargo.toml
crates/titanpack-swc-utils/src/: emitter.rs
crates/titanpack-test-utils/: Cargo.toml
crates/titanpack-tests/: Cargo.toml  README.md  build.rs
crates/titanpack-tests/js/: jest-entry.ts
crates/titanpack-tests/tests/: execution.rs  snapshot.rs  util.rs
crates/titanpack-wasm/: Cargo.toml
crates/titanpack-wasm/src/: module_asset.rs  raw.rs
crates/titanpack/benches/: node_file_trace.rs
crates/titanpack/examples/: titanpack.rs  turbopack.rs
crates/titanpack/src/: condition.rs  evaluate_context.rs  lib.rs  resolve.rs  resolve_options_context.rs  unsupported_sass.rs
crates/titanpack/src/graph/: mod.rs
crates/titanpack/src/module_options/: custom_module_type.rs  mod.rs  module_options_context.rs  module_rule.rs  rule_condition.rs
crates/titanpack/src/rebase/: mod.rs
crates/titanpack/src/transition/: context_transition.rs  mod.rs
crates/titanpack/tests/: node-file-trace.rs
crates/titanpack/tests/node-file-trace/: package.json  pnpm-lock.yaml
crates/titanrepo-auth/: Cargo.toml
crates/titanrepo-auth/src/: error.rs  lib.rs  login.rs  login_server.rs  sso.rs  sso_server.rs
crates/titanrepo-auth/src/mocks/: mock_api_client.rs  mock_login_server.rs
crates/titanrepo-repository/: Cargo.toml
crates/titanrepo-repository/src/: discovery.rs  inference.rs
crates/titanrepo-repository/src/package_graph/: builder.rs  mod.rs
crates/titanrepo-repository/src/package_manager/: mod.rs  pnpm.rs  yarn.rs
crates/turbopack-build/: Cargo.toml
crates/turbopack-build/src/: chunking_context.rs  lib.rs
crates/turbopack-build/src/ecmascript/: minify.rs
crates/turbopack-build/src/ecmascript/node/: chunk.rs  content.rs  version.rs
crates/turbopack-core/: Cargo.toml
crates/turbopack-core/src/: changed.rs  code_builder.rs  compile_time_info.rs  context.rs  file_source.rs  ident.rs  lib.rs  output.rs  raw_module.rs  raw_output.rs  server_fs.rs  source.rs  target.rs  version.rs  virtual_output.rs  virtual_source.rs
crates/turbopack-core/src/chunk/: available_chunk_items.rs  chunking.rs  containment_tree.rs  evaluate.rs  mod.rs  optimize.rs
crates/turbopack-core/src/introspect/: output_asset.rs  source.rs
crates/turbopack-core/src/issue/: analyze.rs  code_gen.rs  resolve.rs
crates/turbopack-core/src/reference/: mod.rs
crates/turbopack-core/src/resolve/: mod.rs  node.rs  options.rs  origin.rs  pattern.rs  remap.rs
crates/turbopack-core/src/source_map/: source_map_asset.rs
crates/turbopack-dev-server/: Cargo.toml
crates/turbopack-dev-server/src/: html.rs  invalidation.rs  lib.rs
crates/turbopack-dev-server/src/source/: asset_graph.rs  combined.rs  issue_context.rs  mod.rs  static_assets.rs  wrapping_source.rs
crates/turbopack-dev-server/src/update/: server.rs
crates/turbopack-json/: Cargo.toml
crates/turbopack-static/: Cargo.toml
crates/turbopack-static/src/: lib.rs
crates/turborepo-ffi/: Cargo.toml  README.md  messages.proto
crates/turborepo-ffi/src/: lib.rs
(+1370 files in other folders)
