[package]
name = "node-file-trace"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"

[[bin]]
name = "node-file-trace"
path = "src/main.rs"
bench = false

[features]
default = ["cli", "custom_allocator"]
cli = ["dep:clap", "titan-tasks-malloc"]
tokio_console = [
  "dep:console-subscriber",
  "tokio/tracing",
  "titan-tasks/tokio_tracing",
]
node-api = []
custom_allocator = ["titan-tasks-malloc", "titan-tasks-malloc/custom_allocator"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, optional = true, features = ["derive"] }
console-subscriber = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }

titan-tasks = { workspace = true }
titan-tasks-fs = { workspace = true }
titan-tasks-malloc = { workspace = true, optional = true, default-features = false }
titan-tasks-memory = { workspace = true }
titanpack = { workspace = true }
titanpack-cli-utils = { workspace = true }
titanpack-core = { workspace = true }

[build-dependencies]
titan-tasks-build = { workspace = true }
