[package]
name = "titan-tasks-bytes"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"

[lib]
bench = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_bytes = "0.11.9"
titan-tasks = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
serde_test = "1.0.157"

[build-dependencies]
titan-tasks-build = { workspace = true }
