[package]
name = "titan-tasks-memory"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"
autobenches = false

[lib]
bench = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
auto-hash-map = { workspace = true }
concurrent-queue = { workspace = true }
dashmap = { workspace = true }
nohash-hasher = { workspace = true }
num_cpus = "1.13.1"
once_cell = { workspace = true }
parking_lot = { workspace = true }
priority-queue = "1.3.0"
ref-cast = "1.0.20"
rustc-hash = { workspace = true }
smallvec = { workspace = true }
titan-tasks = { workspace = true }
titan-tasks-hash = { workspace = true }
titan-tasks-malloc = { workspace = true, default-features = false }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
indexmap = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
titan-tasks-testing = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[build-dependencies]
titan-tasks-build = { workspace = true }

[features]
track_unfinished = []
unsafe_once_map = []
log_running_tasks = []
log_scheduled_tasks = []
log_activate_tasks = []
log_connect_tasks = []
report_expensive = []
print_scope_updates = []
print_task_invalidation = []
inline_add_to_scope = []
inline_remove_from_scope = []
default = []

[[bench]]
name = "mod"
harness = false
