[package]
name = "titanpack-css"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"
autobenches = false

[lib]
bench = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
indexmap = { workspace = true }
indoc = { workspace = true }
lightningcss = { version = "1.0.0-alpha.50", features = [
  "serde",
  "visitor",
  "into_owned",
] }
once_cell = { workspace = true }
parcel_selectors = "0.26.0"
regex = { workspace = true }
serde = { workspace = true }
titan-tasks = { workspace = true }
titan-tasks-fs = { workspace = true }
titan-tasks-hash = { workspace = true }
titanpack-core = { workspace = true }
titanpack-ecmascript = { workspace = true }
titanpack-swc-utils = { workspace = true }
tracing = { workspace = true }

parcel_sourcemap = "2.1.1"
smallvec = "1.11.0"
swc_core = { workspace = true, features = [
  "css_ast",
  "css_codegen",
  "css_compat",
  "css_modules",
  "css_parser",
  "css_visit",
  "ecma_ast",
  "common",
  "common_concurrent",
] }

[build-dependencies]
titan-tasks-build = { workspace = true }
