[package]
name = "titanpack-ecmascript-hmr-protocol"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"
autobenches = false

[lib]
bench = false

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

titanpack-cli-utils = { workspace = true }
titanpack-core = { workspace = true }
