[package]
name = "titanpack-ecmascript-runtime"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"
autobenches = false

[lib]
bench = false

[features]
# enable "HMR" for embedded assets
dynamic_embed_contents = ["titan-tasks-fs/dynamic_embed_contents"]
# enable test utilities such as `RuntimeType::Dummy`
test = []

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
indoc = { workspace = true }
serde = { workspace = true }

titan-tasks = { workspace = true }
titan-tasks-fs = { workspace = true }
titanpack = { workspace = true }
titanpack-core = { workspace = true }
titanpack-ecmascript = { workspace = true }

swc_core = { workspace = true }

[build-dependencies]
titan-tasks-build = { workspace = true }
