[package]
name = "titanpack-env"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"
autobenches = false

[lib]
bench = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
titan-tasks = { workspace = true }
titan-tasks-env = { workspace = true }
titan-tasks-fs = { workspace = true }
titanpack-core = { workspace = true }
titanpack-ecmascript = { workspace = true }

[build-dependencies]
titan-tasks-build = { workspace = true }
