[package]
name = "titanpack-node"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"
autobenches = false

[lib]
bench = false

[features]
# enable "HMR" for embedded assets
dynamic_embed_contents = ["titan-tasks-fs/dynamic_embed_contents"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-stream = "0.3.4"
bytes = { workspace = true }
const_format = "0.2.30"
futures = { workspace = true }
futures-retry = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
mime = { workspace = true }
once_cell = { workspace = true }
owo-colors = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
titan-tasks = { workspace = true }
titan-tasks-bytes = { workspace = true }
titan-tasks-env = { workspace = true }
titan-tasks-fs = { workspace = true }
titanpack-cli-utils = { workspace = true }
titanpack-core = { workspace = true }
titanpack-dev-server = { workspace = true }
titanpack-ecmascript = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }

[build-dependencies]
titan-tasks-build = { workspace = true }
