[package]
name = "titanpack-tests"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"
autobenches = false

# don't publish this crate
publish = false

[lints]
workspace = true

[dependencies]
titanpack = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
dunce = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
testing = { workspace = true }
titan-tasks = { workspace = true }
titan-tasks-bytes = { workspace = true }
titan-tasks-env = { workspace = true }
titan-tasks-fs = { workspace = true }
titan-tasks-memory = { workspace = true }
titanpack-build = { workspace = true, features = ["test"] }
titanpack-cli-utils = { workspace = true }
titanpack-core = { workspace = true, features = ["issue_path"] }
titanpack-dev = { workspace = true, features = ["test"] }
titanpack-ecmascript-plugins = { workspace = true, features = [
  "transform_emotion",
] }
titanpack-ecmascript-runtime = { workspace = true }
titanpack-env = { workspace = true }
titanpack-node = { workspace = true }
titanpack-test-utils = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
titan-tasks-build = { workspace = true }
