[package]
name = "titanpack"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"
autobenches = false

[lib]
bench = false

[features]
test_persistent_cache = []
bench_against_node_nft = []

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-recursion = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
lazy_static = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

titan-tasks = { workspace = true }
titan-tasks-env = { workspace = true }
titan-tasks-fs = { workspace = true }
titanpack-core = { workspace = true }
titanpack-css = { workspace = true }
titanpack-ecmascript = { workspace = true }
titanpack-ecmascript-plugins = { workspace = true }
titanpack-env = { workspace = true }
titanpack-image = { workspace = true }
titanpack-json = { workspace = true }
titanpack-mdx = { workspace = true }
titanpack-node = { workspace = true }
titanpack-static = { workspace = true }
titanpack-wasm = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
difference = "2.0"
futures = { workspace = true }
rstest = { workspace = true }
rstest_reuse = "0.5.0"
titan-tasks-malloc = { workspace = true, default-features = false }
titan-tasks-memory = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
titan-tasks-build = { workspace = true }

[[bench]]
name = "mod"
harness = false
