[package]
name = "titanrepo-auth"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
async-trait.workspace = true
axum-server = { workspace = true }
axum.workspace = true
chrono.workspace = true
dirs-next = "2.0.0"
hostname = "0.3.1"
lazy_static.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror = "1.0.38"
titanpath = { workspace = true }
titanrepo-api-client = { workspace = true }
titanrepo-ui.workspace = true
titanrepo-vercel-api = { workspace = true }
titanrepo-vercel-api-mock = { workspace = true }
tokio.workspace = true
tracing.workspace = true
url = { workspace = true }
webbrowser = { workspace = true }

[dev-dependencies]
port_scanner = { workspace = true }
