[package]
name = "titanrepo-repository"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
globwalk = { version = "0.1.0", path = "../titanrepo-globwalk" }
itertools = { workspace = true }
lazy-regex = "2.5.0"
node-semver = "2.1.0"
petgraph = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = "1.0.38"
titanpath = { workspace = true }
titanrepo-graph-utils = { path = "../titanrepo-graph-utils" }
titanrepo-lockfiles = { workspace = true }
tokio-stream = "0.1.14"
tokio.workspace = true
tracing.workspace = true
wax = { workspace = true }
which = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
test-case = { workspace = true }
