[package]
name = "titanpack-build"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"
autobenches = false

[lib]
bench = false

[features]
# enable "HMR" for embedded assets
dynamic_embed_contents = ["titan-tasks-fs/dynamic_embed_contents"]
# enable test utilities such as `RuntimeType::Dummy`
test = ["titanpack-ecmascript-runtime/test"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
indexmap = { workspace = true }
indoc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
sourcemap = { workspace = true }
swc_core = { workspace = true, features = [
  "__parser",
  "ecma_minifier",
  "ecma_minifier_concurrent",
] }
tracing = { workspace = true }

titan-tasks = { workspace = true }
titan-tasks-fs = { workspace = true }
titan-tasks-hash = { workspace = true }
titanpack-core = { workspace = true }
titanpack-css = { workspace = true }
titanpack-ecmascript = { workspace = true }
titanpack-ecmascript-runtime = { workspace = true }

[build-dependencies]
titan-tasks-build = { workspace = true }
